--- a/views/juego.erb
+++ b/views/juego.erb
@@ -11,3 +11,9 @@
 <label name = "intentos">Te quedan <%= @intentos %> vidas.</label> 
 </br>
 <label name = "mensaje"><%= @mensaje %></label> 
+
+<% if  true  %>
+  <h1> hol  </h1>
+<%else%>
+  <br>
+<%end%>
